php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #28096 stream_socket_accept on an ssl server socket doesn't enable ssl
Submitted: 2004-04-21 18:02 UTC Modified: 2004-04-22 01:04 UTC
From: wez@php.net Assigned: wez (profile)
Status: Closed Package: OpenSSL related
PHP Version: 5CVS-2004-04-21 (dev) OS: any
Private report: No CVE-ID: None
 [2004-04-21 18:02 UTC] wez@php.net
Description:
------------
stream_socket_server("ssl://....") incorrectly applies SSL settings to the master listening socket, when it should instead remember those settings and apply them to the newly accepted client connection socket.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-04-22 01:04 UTC] wez@php.net
Fixed.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC