Fix bug #28096 - stream_socket_accept() on an SSL server socket doesn't enable SSL on the accepted socket.

- Add cipher list context option
- Add helpful hint about why SSL server socket fails with mysterious
  error (eg: you need an SSL certificate for most ciphers).